--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,16 +10,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PMS">
         <activity
-            android:name=".AddPlantScreen"
+            android:name=".view.AddPlantScreen"
             android:exported="false" />
         <activity
-            android:name=".PlantDetailScreen"
+            android:name=".view.PlantDetailScreen"
             android:exported="false" />
         <activity
-            android:name=".firstScreen"
+            android:name=".view.firstScreen"
             android:exported="false" />
         <activity
-            android:name=".SignUp"
+            android:name=".view.SignUp"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
